Feat:features impleted

--- a/views/admin/layout/admin-header-layout.ejs
+++ b/views/admin/layout/admin-header-layout.ejs
@@ -47,12 +47,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center text-white" >
-
-
-
-
-
+            <a class="sidebar-brand d-flex align-items-center justify-content-center text-white">
 
                 <div class="sidebar-brand-text">
                     <img class="img-profile rounded-circle" style="width: 30px; height: 30px;"
@@ -85,12 +80,28 @@
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Products</span></a>
             </li>
+            
             <hr class="sidebar-divider my-0">
-
             <li class="nav-item active">
                 <a class="nav-link" href="/admin/category">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Category</span></a>
+            </li>
+
+            <!-- Banner -->
+            <hr class="sidebar-divider my-0">
+            <li class="nav-item active">
+                <a class="nav-link" href="/admin/banner">
+                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <span>Banner</span></a>
+            </li>
+
+            <!-- Brand -->
+            <hr class="sidebar-divider my-0">
+            <li class="nav-item active">
+                <a class="nav-link" href="/admin/brand">
+                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <span>Brand</span></a>
             </li>
 
             <hr class="sidebar-divider my-0">
@@ -99,12 +110,19 @@
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Coupons</span></a>
             </li>
-
+            <!--  order list -->
             <hr class="sidebar-divider my-0">
             <li class="nav-item active">
                 <a class="nav-link" href="/admin/Orders">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Users Orderlist</span></a>
+            </li>
+            <!-- custom order list -->
+            <hr class="sidebar-divider my-0">
+            <li class="nav-item active">
+                <a class="nav-link" href="/admin/customorders">
+                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <span>Custom Orderlist</span></a>
             </li>
             <hr class="sidebar-divider my-0">
             <li class="nav-item active">
