--- a/views/admin/admin-addproduct.ejs
+++ b/views/admin/admin-addproduct.ejs
@@ -47,7 +47,10 @@
             <label for="input-5"  style="color: #000;">Description</label>
             <input class="form-control" id="input-5" type="tel" required name="description">
           </div>
-
+          <!-- <div class="form-group">
+            <label for="input-5"  style="color: #000;">Sheet Link</label>
+            <input class="form-control" id="input-5" type="text" required name="sheet">
+          </div> -->
           <div class="form-group">
             <label for="input-5"  style="color: #000;">Image</label>
             <input type="file" multiple class="form-control" id="input-5" name="Image"
