--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -1,122 +1,75 @@
+/* eslint-disable-next-line */
 <%-include('../admin/layout/admin-header-layout.ejs') -%>
 
-<div class="col-lg">
-  <div class="card">
-      <div class="card-body">
-          <div class="card-title">Add Category</div>
-          <hr>
-          <form action="/admin/addcategory" method="post">
-
-              <div class="form-group">
-                  <label for="input-4">Type of Dress</label>
-                  <input class="form-control" id="input-4" type="text"  required name="category">
-              </div>
-
-              <div class="form-group">
-                  <button type="submit" class="btn btn-success px-5"> Add Category</button>
-              </div>
-          </form>
-      </div>
-  </div>
-
-
-
-
-  <div class="card">
-      <div class="card-body ">
-          <div style="display: flex; justify-content: space-between;">
-              <h5 class="card-title">Dress Type</h5>
-          </div>
-          <!-- <div class="d-grid gap-2 d-md-flex justify-content-md-end"></div> -->
-
-          <div class="table-responsive">
-              <table class="table table-hover">
-                  <thead> 
-                      <tr>
-                        <th scope="col">#</th>
-                          <th scope="col">Type of Dresses</th>
-                          <th scope="col">Actions</th>
-                      </tr>
-                  </thead>
-                  <tbody>
-                      <% category.forEach((category,index)=> { %>
-                          <tr>
-                            <td><%= index +1 %></td>
-                              <td><%= category.category %></td>
-
-                              <td>
-                              <form action="/admin/deletecategory/<%= category._id %>" method="get">
-                                  <button type="submit" class="btn  btn-danger 	fa fa-trash" style="width: 75px; height: 30px;"
-                                      onclick="return confirm('Are you sure you want to delete ?')"><p placeholder="Delete"></p></button>
-                              </form>
-                          </td>
-
-                              </td>
-
-                          </tr>
-                          <% }) %>
-                  </tbody>
-              </table>
-          </div>
-      </div>
-
-
-
-
-
-      <div class="col-lg">
+    <div class="col-lg">
         <div class="card">
             <div class="card-body">
                 <div class="card-title">Add Category</div>
                 <hr>
-                <form action="/admin/addsize" method="post">
-      
+                <form action="/admin/addcategory" method="post" enctype="multipart/form-data">
+
                     <div class="form-group">
-                        <label for="input-4">Sizes</label>
-                        <input class="form-control" id="input-4" type="text"  required name="size">
+                        <label for="input-4">Type of Dress</label>
+                        <input class="form-control" id="input-4" type="text" required name="category">
                     </div>
-      
+
+                    <div class="form-group">
+                        <label for="input-5" style="color: #000;">Category Image</label>
+                        <input type="file" class="form-control" id="input-5" name="Image"
+                            placeholder="Choose an image" />
+                    </div>
+
+                    <!-- <p style="color: red;">Category already exist</p> -->
                     <div class="form-group">
                         <button type="submit" class="btn btn-success px-5"> Add Category</button>
                     </div>
                 </form>
             </div>
         </div>
-      
-      
-      
-      
+
         <div class="card">
             <div class="card-body ">
                 <div style="display: flex; justify-content: space-between;">
-                    <h5 class="card-title">Size</h5>
+                    <h5 class="card-title">Dress Type</h5>
                 </div>
                 <!-- <div class="d-grid gap-2 d-md-flex justify-content-md-end"></div> -->
-      
+
                 <div class="table-responsive">
                     <table class="table table-hover">
-                        <thead> 
+                        <thead>
                             <tr>
-                              <th scope="col">#</th>
-                                <th scope="col">Sizes</th>
+                                <th scope="col">#</th>
+                                <th scope="col">Type of Dresses</th>
+                                <th scope="col">Image</th>
                                 <th scope="col">Actions</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <% size.forEach((size,index)=> { %>
+                            <% category.forEach((category,index)=> { %>
                                 <tr>
-                                  <td><%= index +1 %></td>
-                                    <td><%= size.size %></td>
-      
                                     <td>
-                                    <form action="/admin/deletesize/<%= size._id %>" method="get">
-                                        <button type="submit" class="btn  btn-danger 	fa fa-trash" style="width: 75px; height: 30px;"
-                                            onclick="return confirm('Are you sure you want to delete ?')"><p placeholder="Delete"></p></button>
-                                    </form>
-                                </td>
-      
+                                        <%= index +1 %>
                                     </td>
-      
+                                    <td>
+                                        <%= category.category %>
+                                    </td>
+                                    <td><img src='/images/category/<%= category.Image %>' alt="" class="bt-0"
+                                            style="height: 50px; width: 50px;"></td>
+
+
+
+                                    <td>
+                                        <form action="/admin/deletecategory/<%= category._id %>" method="get">
+                                            <button type="submit" class="btn  btn-danger 	fa fa-trash"
+                                                style="width: 75px; height: 30px;"
+                                                onclick="return confirm('Are you sure you want to delete ?')">
+                                                <p placeholder="Delete"></p>
+                                            </button>
+                                        </form>
+                                    </td>
+
+
+
                                 </tr>
                                 <% }) %>
                         </tbody>
@@ -124,4 +77,74 @@
                 </div>
             </div>
 
-<%-include('../admin/layout/admin-footer-layout') -%>
+
+
+
+
+            <div class="col-lg">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="card-title">Add Size</div>
+                        <hr>
+                        <form action="/admin/addsize" method="post">
+
+                            <div class="form-group">
+                                <label for="input-4">Sizes</label>
+                                <input class="form-control" id="input-4" type="text" required name="size">
+                            </div>
+
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-success px-5"> Add Size</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+
+
+
+                <div class="card">
+                    <div class="card-body ">
+                        <div style="display: flex; justify-content: space-between;">
+                            <h5 class="card-title">Size</h5>
+                        </div>
+                        <!-- <div class="d-grid gap-2 d-md-flex justify-content-md-end"></div> -->
+
+                        <div class="table-responsive">
+                            <table class="table table-hover">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">#</th>
+                                        <th scope="col">Sizes</th>
+                                        <th scope="col">Actions</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <% size.forEach((size,index)=> { %>
+                                        <tr>
+                                            <td>
+                                                <%= index +1 %>
+                                            </td>
+                                            <td>
+                                                <%= size.size %>
+                                            </td>
+
+                                            <td>
+                                                <form action="/admin/deletesize/<%= size._id %>" method="get">
+                                                    <button type="submit" class="btn  btn-danger 	fa fa-trash"
+                                                        style="width: 75px; height: 30px;"
+                                                        onclick="return confirm('Are you sure you want to delete ?')">
+                                                        <p placeholder="Delete"></p>
+                                                    </button>
+                                                </form>
+                                            </td>
+
+                                            </td>
+
+                                        </tr>
+                                        <% }) %>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <%-include('../admin/layout/admin-footer-layout') -%>
