--- a/views/user/home-page.ejs
+++ b/views/user/home-page.ejs
@@ -1,90 +1,63 @@
 <%- include('../user/layout/user-header.ejs') -%>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- Carousel Start -->
     <div class="container-fluid mb-3">
-        <div >
-          <div class="row px-xl-5">
-            <div class="col-lg-8">
-                <div id="header-carousel" class="carousel slide carousel-fade mb-30 mb-lg-0" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#header-carousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#header-carousel" data-slide-to="1"></li>
-                        <li data-target="#header-carousel" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner" >
-                        <div class="carousel-item position-relative active" style="height: 430px;">
-                            <img class="position-absolute w-100 h-100"
-                                src="https://www.mydesignation.com/wp-content/uploads/2022/01/minnal-murali-couple-tshirt-mydesignation-website-image-latest.jpg"
+        <div class="row px-xl-5">
+
+            <div id="header-carousel" class="carousel slide carousel-fade mb-30 mb-lg-0" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <% banners.forEach((banner, index)=> { %>
+                        <li data-target="#header-carousel" data-slide-to="<%= index %>" <% if (index===0) { %>
+                            class="active"<% } %>></li>
+                        <% }); %>
+                </ol>
+
+                <div class="carousel-inner">
+                    <% banners.forEach((banner,index)=> { %>
+                        <div class="carousel-item position-relative  <%= index===0 ? 'active' : '' %>"
+                            style="height: 430px;">
+                            <img class="position-absolute w-100 h-100" src='/images/banner/<%= banner.Image %>'
                                 style="object-fit: cover;">
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px;">
-                                    <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">Minnal
-                                        Murali
+                                    <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">
+                                        <%= banner.banner %>
                                     </h1>
                                     <p class="mx-md-5 px-5 animate__animated animate__bounceIn"></p>
                                     <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp"
-                                        href="/product-page/63b7a66c187f9ca868d840db">Shop Now</a>
+                                        href="/product-page/<%= banner._id %>">Shop Now</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="carousel-item position-relative" style="height: 430px;">
-                            <img class="position-absolute w-100 h-100"
-                                src="https://www.mydesignation.com/wp-content/uploads/2022/08/angel-wings-oversized-tshirt-display-image-unisex-glowing-.jpg"
-                                style="object-fit: cover;">
-                            <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                                <div class="p-3" style="max-width: 700px;">
-                                    <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">Glow in
-                                        the DARK</h1>
-                                    <p class="mx-md-5 px-5 animate__animated animate__bounceIn"></p>
-                                    <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp"
-                                        href="/product-page/639477c976bc7ff3a063fc32">Shop Now</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item position-relative" style="height: 430px;">
-                            <img class="position-absolute w-100 h-100"
-                                src="https://www.mydesignation.com/wp-content/uploads/2022/12/varsity-jacket-main-duo-image-.jpg"
-                                style="object-fit: cover;">
-                            <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                                <div class="p-3" style="max-width: 700px;">
-                                    <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">Varsity
-                                        Jacket
-                                    </h1>
-                                    <p class="mx-md-5 px-5 animate__animated animate__bounceIn"> </p>
-                                    <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp"
-                                        href="/product-page/63b7a6e6187f9ca868d840e2">Shop Now</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                        <% }) %>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-12 col-md-6">
-                <div class="product-offer mb-30" style="height: 200px;">
-                    <img class="img-fluid"
-                        src="https://www.mydesignation.com/wp-content/uploads/2021/08/WORKOUT-TSHIRTS-HOME-PAGE-TILE-min.jpg"
-                        alt="">
-                    <div class="offer-text">
-                        <h3 class="text-white">Black Fit</h3>
-                        <a href="/product-page/63958cc1f4a996c8b617c324" class="btn btn-primary">Shop Now</a>
-                    </div>
-                </div> 
-                <div class="product-offer mb-30" style="height: 200px;">
-                    <img class="img-fluid"
-                        src="https://www.mydesignation.com/wp-content/uploads/2020/07/panipaali-hoodie-neeraj-madhav-mydesignation-product-image.jpg"
-                        alt="">
-                    <div class="offer-text">
-                        <h3 class="text-white">Pani paali
-                        </h3>
-                        <a href="/product-page/6394781576bc7ff3a063fc39" class="btn btn-primary">Shop Now</a>
-                    </div>
-                </div>
-            </div>
+
         </div>
     </div>
-
-    </div>
     <!-- Carousel End -->
+
+    <!-- Category Start -->
+    <div class="container-fluid pt-5">
+        <div class="row px-xl-5 pb-3">
+            <% allCategory.forEach((category,index)=> { %>
+
+                <div class="col-lg-4 col-md-6 col-sm-12 ">
+                    <div class="product-offer mb-30" style="height: 200px;">
+                        <img class="img-fluid" src='/images/category/<%= category.Image %>' alt="">
+                        <div class="offer-text">
+                            <h3 class="text-white">
+                                <%= category.category %>
+                            </h3>
+                            <a href="/product-page/<%= category._id %>" class="btn btn-primary">Shop Now</a>
+                        </div>
+                    </div>
+                </div>
+                <% }) %>
+        </div>
+    </div>
+    <!-- Category End -->
 
 
     <!-- Featured Start -->
