--- a/views/user/layout/user-header.ejs
+++ b/views/user/layout/user-header.ejs
@@ -22,7 +22,7 @@
     <!-- Libraries Stylesheet -->
     <link href="lib/animate/animate.min.css" rel="stylesheet">
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    
+
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="/stylesheets/style.css" rel="stylesheet" type="text/css">
@@ -34,7 +34,7 @@
 <body>
     <!-- Topbar Start -->
     <div class="container-fluid">
-        <div class="row bg-secondary  px-xl-5 row px-xl-5">
+        <div class="row bg-secondary  px-xl-5 row px-xl-5 pt-1 pt-lg-0">
 
             <div class="col-lg-6  text-center text-lg-right ">
                 <% if (user) { %>
@@ -134,29 +134,11 @@
 
 
     <!-- Navbar Start -->
-    <div class="container-fluid bg-secondary mb-30">
-        <div class="row px-xl-5">
-            <div class="col-lg-3 d-none d-lg-block">
-                <a class="btn d-flex align-items-center justify-content-between bg-primary w-100" data-toggle="collapse"
-                    href="#navbar-vertical" style="height: 65px; padding: 0 30px;">
-                    <h6 class="text-dark m-0"><i class="fa fa-bars mr-2"></i>Categories</h6>
-                    <i class="fa fa-angle-down text-dark"></i>
-                </a>
-                <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 bg-light"
-                    id="navbar-vertical" style="width: calc(100% - 30px); z-index: 999;">
-                    <div class="navbar-nav w-100">
+    <div class="container-fluid bg-secondary  mb-30">
+        <div class="row px-xl-5 pt-1 pt-lg-0">
 
-                        <% allCategory.forEach((Cat)=>{ %>
-                            <a href="/productCategory/<%= Cat._id %>" class="nav-item nav-link">
-                                <%= Cat.category %>
-                            </a>
-                            <% }) %>
 
-                    </div>
-                </nav>
-            </div>
-
-            <div class="col-lg-9">
+            <div class="col-lg-9 order-lg-2">
                 <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 py-lg-0 px-0 ">
 
                     <button type="button" class="navbar-toggler ml-3" data-toggle="collapse"
@@ -165,7 +147,7 @@
                     </button>
                     <a href="" class="text-decoration-none d-block d-lg-none">
                         <span class="h1 text-uppercase text-primary  px-2 rounded" style="color: black;">Echo</span>
-                        <span class="h1 text-uppercase  bg-primary px-2 ml-n1 rounded mr-5"
+                        <span class="h1 text-uppercase  bg-primary px-2 ml-n1 rounded mr-3"
                             style="color: black;">Cart</span>
                     </a>
 
@@ -206,6 +188,25 @@
                     </div>
                 </nav>
 
+            </div>
+            <div class="col-lg-3  order-lg-1">
+                <a class="btn d-flex align-items-center justify-content-between bg-primary w-100 "
+                    data-toggle="collapse" href="#navbar-vertical" style="height: 65px; padding: 0 30px;">
+                    <h6 class="text-dark m-0"><i class="fa fa-bars mr-2"></i>Categories</h6>
+                    <i class="fa fa-angle-down text-dark"></i>
+                </a>
+                <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 bg-light"
+                    id="navbar-vertical" style="width: calc(100% - 30px); z-index: 999;">
+                    <div class="navbar-nav w-100">
+
+                        <% allCategory.forEach((Cat)=>{ %>
+                            <a href="/productCategory/<%= Cat._id %>" class="nav-item nav-link">
+                                <%= Cat.category %>
+                            </a>
+                            <% }) %>
+
+                    </div>
+                </nav>
             </div>
         </div>
     </div>
