--- a/views/user/product-page.ejs
+++ b/views/user/product-page.ejs
@@ -54,29 +54,29 @@
                     </p>
 
 
-                    
+
                     <!-- <div class="d-flex mb-3">
                         <strong class="text-dark mr-3">   </strong>
                     </div> -->
                     <div class="selectOptionBoxisNewDesign">
-                        <label for="brand">My Brand</label>
                         <select name="brand" id="brand">
-                            <option value="">Select Brand</option>
-                            <option class="device--options" value="Apple">Apple</option>
-                            <option class="device--options" value="Huawei">Huawei</option>
-                            <option class="device--options" value="Motorola">Motorola</option>
-                            <option class="device--options" value="Nothing Phone">Nothing Phone</option>
-                            <option class="device--options" value="OnePlus">OnePlus</option>
-                            <option class="device--options" value="Oppo">Oppo</option>
-                            <option class="device--options" value="POCO">POCO</option>
-                            <option class="device--options" value="Realme">Realme</option>
-                            <option class="device--options" value="Samsung">Samsung</option>
-                            <option class="device--options" value="Vivo">Vivo</option>
-                            <option class="device--options" value="Xiaomi">Xiaomi</option>
+                            <% brands.forEach((brand,index)=> { %>
+                                <option class="device--options" value="<%= brand.brand %>">
+                                    <%= brand.brand %>
+                                </option>
+                                <% }) %>
                         </select>
                     </div>
-        
 
+                    <div class="selectOptionBoxisNewDesign">
+                        <select name="brand" id="brand">
+                            <% models.forEach((model,index)=> { %>
+                                <option class="device--options" value="<%= model %>">
+                                    <%= model %>
+                                </option>
+                                <% }) %>
+                        </select>
+                    </div>
 
 
                     <div class="d-flex align-items-center mb-4 pt-2">
@@ -98,13 +98,13 @@
                             <a class="text-dark px-2">
                                 <i class="fab fa-facebook-f"></i>
                             </a>
-                            <a class="text-dark px-2" >
+                            <a class="text-dark px-2">
                                 <i class="fab fa-twitter"></i>
                             </a>
-                            <a class="text-dark px-2" >
+                            <a class="text-dark px-2">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
-                            <a class="text-dark px-2" >
+                            <a class="text-dark px-2">
                                 <i class="fab fa-pinterest"></i>
                             </a>
                         </div>
