--- a/views/admin/layout/admin-header-layout.ejs
+++ b/views/admin/layout/admin-header-layout.ejs
@@ -120,6 +120,12 @@
             <!-- custom order list -->
             <hr class="sidebar-divider my-0">
             <li class="nav-item active">
+                <a class="nav-link" href="/admin/processdays">
+                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <span>Process Days</span></a>
+            </li>
+            <hr class="sidebar-divider my-0">
+            <li class="nav-item active">
                 <a class="nav-link" href="/admin/customorders">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Custom Orderlist</span></a>
