--- a/views/user/userProfile.ejs
+++ b/views/user/userProfile.ejs
@@ -13,7 +13,7 @@
         <div class="row px-xl-5 pb-3">
             <h3 class="font-weight-semi-bold m-0  mb-5" style="text-align: center;">Personal Information</h3>
 
-            <div class="container-fluid ">
+            <div class="md:container-fluid ">
                 <div class="row px-xl-5 pb-3">
                     <div class="col-lg-4 col-md-6 col-sm-12 pb-1">
                         <div class="d-flex align-items-center bg-light mb-4" style="padding: 30px;">
@@ -23,14 +23,14 @@
                             </h5>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 pb-1">
+                    <!-- <div class="col-lg-4 col-md-6 col-sm-12 pb-1">
                         <div class="d-flex align-items-center bg-light mb-4" style="padding: 30px;">
                             <h5 class="fa fa-shipping-fast text-success m-0 mr-2">Email: </h5>
                             <h5 class="font-weight-semi-bold m-0">
                                 <%=user.email%>
                             </h5>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="col-lg-4 col-md-6 col-sm-12 pb-1 ">
                         <div class="d-flex align-items-center bg-light mb-4 " style="padding: 30px;">
                             <h5 class="fas fa-exchange-alt text-success m-0 mr-3">Mob Number:</h5>
