--- a/views/admin/banner.ejs
+++ b/views/admin/banner.ejs
@@ -9,13 +9,15 @@
 
                     <div class="form-group">
                         <label for="input-4">Banner Text</label>
-                        <input class="form-control" id="input-4" type="text" required name="banner">
+                        <input class="form-control" id="input-4" type="text" required name="banner"
+                            style=" >
                     </div>
 
                     <div class="form-group">
                         <label for="input-5" style="color: #000;">Banner Image</label>
-                        <input type="file" class="form-control" id="input-5" name="Image"
-                            placeholder="Choose an image" />
+                        <input type="file" class="form-control" id="imageUpload" name="Image"
+                            placeholder="Choose an image" accept="image/*" />
+                        <div id="validationMessage" style="color: red;"></div>
                     </div>
 
                     <div class="form-group">
@@ -75,3 +77,31 @@
 
 
             <%-include('../admin/layout/admin-footer-layout') -%>
+                <script>
+                    document.getElementById("input-4").addEventListener("input", function () {
+                        this.value = capitalizeFirstLetter(this.value);
+                    });
+
+                    function capitalizeFirstLetter(value) {
+                        return value.charAt(0).toUpperCase() + value.slice(1);
+                    }
+                    document.getElementById('imageUpload').addEventListener('change', function () {
+                        const fileInput = this;
+                        const validationMessage = document.getElementById('validationMessage');
+
+                        if (fileInput.files.length > 0) {
+                            const file = fileInput.files[0];
+                            const image = new Image();
+
+                            image.src = URL.createObjectURL(file);
+                            image.onload = function () {
+                                if (image.width < 1024 || image.height < 786) {
+                                    validationMessage.textContent = 'Image dimensions should be at-least 1024x786 pixels.';
+                                    fileInput.value = ''; // Clear the file input
+                                } else {
+                                    validationMessage.textContent = ''; // Clear any previous error messages
+                                }
+                            };
+                        }
+                    })
+                </script>
