--- a/views/admin/layout/admin-header-layout.ejs
+++ b/views/admin/layout/admin-header-layout.ejs
@@ -80,7 +80,7 @@
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Products</span></a>
             </li>
-            
+
             <hr class="sidebar-divider my-0">
             <li class="nav-item active">
                 <a class="nav-link" href="/admin/category">
@@ -120,12 +120,6 @@
             <!-- custom order list -->
             <hr class="sidebar-divider my-0">
             <li class="nav-item active">
-                <a class="nav-link" href="/admin/processdays">
-                    <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>Process Days</span></a>
-            </li>
-            <hr class="sidebar-divider my-0">
-            <li class="nav-item active">
                 <a class="nav-link" href="/admin/customorders">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Custom Orderlist</span></a>
@@ -137,7 +131,12 @@
                     <span>Sales Report</span></a>
             </li>
 
-
+            <hr class="sidebar-divider my-0">
+            <li class="nav-item active">
+                <a class="nav-link" href="/admin/settings">
+                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <span>Settings</span></a>
+            </li>
             <hr class="sidebar-divider d-none d-md-block">
 
 
