--- a/views/user/home-page.ejs
+++ b/views/user/home-page.ejs
@@ -16,7 +16,7 @@
                 <div class="carousel-inner">
                     <% banners.forEach((banner,index)=> { %>
                         <div class="carousel-item position-relative  <%= index===0 ? 'active' : '' %>"
-                            style="height: 430px;">
+                            style="height: 600px;">
                             <img class="position-absolute w-100 h-100" src='/images/banner/<%= banner.Image %>'
                                 style="object-fit: cover;">
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
@@ -29,6 +29,7 @@
                                         href="/product-page/<%= banner._id %>">Shop Now</a>
                                 </div>
                             </div>
+                            <div class="image-overlay"></div>
                         </div>
                         <% }) %>
                 </div>
@@ -52,6 +53,8 @@
                             </h3>
                             <a href="/product-page/<%= category._id %>" class="btn btn-primary">Shop Now</a>
                         </div>
+                        <div class="image-overlay"></div>
+                        
                     </div>
                 </div>
                 <% }) %>
@@ -154,3 +157,15 @@
 
 
     <%- include('../user/layout/user-footer.ejs') -%>
+        <style>
+            .image-overlay {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5));
+                pointer-events: none;
+                /* Allow clicking through the overlay */
+            }
+        </style>
