--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -28,6 +28,15 @@
 			background-repeat: no-repeat;
 			height: 100%;
 			font-family: 'Numans', sans-serif;
+			margin: 0;
+			padding: 0;
+		}
+
+		.container {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 90vh;
 		}
 	</style>
 </head>
@@ -35,7 +44,7 @@
 <body>
 	<!-- <div class="form-group">
        <img src="https://cdn.dribbble.com/users/959248/screenshots/18277974/media/07cbc8b0da794ff03e477c50667c69e2.png?compress=1&resize=768x576&vertical=top"  style="width:50px ; height: 50px;"> -->
-	<div class="col-lg-4 pt-2">
+	<div class="col-lg-4 pt-4">
 		<a href="/" class="text-decoration-none">
 			<span class="h1 text-uppercase text-primary px-2 rounded">Echo</span>
 			<span class="h1 text-uppercase  bg-primary px-2 ml-n1 rounded" style="color: black;">Kart</span>
@@ -92,5 +101,6 @@
 	</div>
 
 </body>
+
 
 </html>
