--- a/views/user/product-page.ejs
+++ b/views/user/product-page.ejs
@@ -12,9 +12,9 @@
                 <div id="product-carousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner bg-light">
                         <div class="carousel-item active">
-                            <img class="w-100 h-100" src="/images/product/<%= totalproducts.Image[0] %>" alt="Image">
+                            <img class="w-100 h-100" src="/images/product/<%= product.Image[0] %>" alt="Image">
                         </div>
-                        <%totalproducts.Image.forEach((Image,index)=>{ %>
+                        <%product.Image.forEach((Image,index)=>{ %>
                             <%if(!index==0){%>
                                 <div class="carousel-item">
                                     <img class="w-100 h-100" src="/images/product/<%= Image %>" alt="Image">
@@ -35,30 +35,20 @@
             <div class="col-lg-7 h-auto mb-30">
                 <div class="h-100 bg-light p-30">
                     <h3>
-                        <%= totalproducts.productName %>
+                        <%= product.productName %>
                     </h3>
-                    <!-- <div class="d-flex mb-3">
-                        <div class="text-primary mr-2">
-                            <small class="fas fa-star"></small>
-                            <small class="fas fa-star"></small>
-                            <small class="fas fa-star"></small>
-                            <small class="fas fa-star-half-alt"></small>
-                            <small class="far fa-star"></small>
-                        </div>
-                        <small class="pt-1">(99 Reviews)</small>
-                    </div> -->
-                    <h3 class="font-weight-semi-bold mb-4">₹<%= totalproducts.price %>
+
+                    <h3 class="font-weight-semi-bold mb-4">₹<%= product.price %>
                     </h3>
                     <p class="mb-4">
-                        <%= totalproducts.description %>
+                        <%= product.description %>
                     </p>
 
 
 
-                    <!-- <div class="d-flex mb-3">
-                        <strong class="text-dark mr-3">   </strong>
-                    </div> -->
-                    <div class="selectOptionBoxisNewDesign">
+
+                    <div class="selectOptionBoxisNewDesign mt-2">
+                        <label for="brand">Brand:</label>
                         <select name="brand" id="brand">
                             <% brands.forEach((brand,index)=> { %>
                                 <option class="device--options" value="<%= brand.brand %>">
@@ -68,7 +58,10 @@
                         </select>
                     </div>
 
-                    <div class="selectOptionBoxisNewDesign">
+
+
+                    <div class="selectOptionBoxisNewDesign mt-2">
+                        <label for="brand">Model:</label>
                         <select name="brand" id="brand">
                             <% models.forEach((model,index)=> { %>
                                 <option class="device--options" value="<%= model %>">
@@ -78,7 +71,6 @@
                         </select>
                     </div>
 
-
                     <div class="d-flex align-items-center mb-4 pt-2">
                         <div class="input-group quantity mr-3" style="width: 130px;">
 
@@ -87,7 +79,7 @@
                                 </button></a>
 
                         </div>
-                        <button onclick="addToCart('<%= totalproducts._id %>')" class="btn btn-primary px-3 rounded"><i
+                        <button onclick="addToCart('<%= product._id %>')" class="btn btn-primary px-3 rounded"><i
                                 class="fa fa-shopping-cart mr-1 "></i> Add To
                             Cart</button>
 
@@ -120,3 +112,13 @@
 
 
     <%- include('../user/layout/user-footer.ejs') -%>
+        <script>
+            document.getElementById("input-4").addEventListener("input", function () {
+                this.value = capitalizeFirstLetter(this.value);
+            });
+
+            function capitalizeFirstLetter(value) {
+                return value.charAt(0).toUpperCase() + value.slice(1);
+            }
+
+        </script>
