--- a/views/user/home-page.ejs
+++ b/views/user/home-page.ejs
@@ -51,10 +51,10 @@
                             <h3 class="text-white">
                                 <%= category.category %>
                             </h3>
-                            <a href="/product-page/<%= category._id %>" class="btn btn-primary">Shop Now</a>
+                            <a href="/productCategory/<%= category._id%>" class="btn btn-primary">Shop Now</a>
                         </div>
                         <div class="image-overlay"></div>
-                        
+
                     </div>
                 </div>
                 <% }) %>
