--- a/views/user/layout/user-header.ejs
+++ b/views/user/layout/user-header.ejs
@@ -40,36 +40,52 @@
                 <% if (user) { %>
                     <div class="d-inline-flex align-items-center justify-content-between d-block d-lg-none">
                         <div class="d-flex justify-content-between">
+                            <form id="customForm1" action="/order/custom" method="get">
+                                <input type="hidden" name="id" id="productId">
+                                <button class="btn px-0 ml-2" id="customButton1" type="submit">
+                                    <i class="fas fa-book text-dark"></i>
+                                    <span class="hidden d-md-block">
+                                        Custom
+                                    </span>
+                                </button>
+                            </form>
+
+
                             <a href="/wishlist" class="btn px-0 ml-2">
                                 <i class="fas fa-heart text-dark"></i>
                                 <% if (listCount) { %>
-                                    <span class="badge text-dark border border-dark rounded-circle" style="padding-bottom: 2px;">
+                                    <span class="badge text-dark border border-dark rounded-circle"
+                                        style="padding-bottom: 2px;">
                                         <%= listCount %>
                                     </span>
-                                <% } %>
+                                    <% } %>
                             </a>
-                            
+
                             <a href="/cart" class="btn px-0 ml-2">
                                 <i class="fas fa-shopping-cart text-dark"></i>
                                 <% if (cartCount) { %>
-                                    <span class="badge text-dark border border-dark rounded-circle" id="cartCount" style="padding-bottom: 2px;">
+                                    <span class="badge text-dark border border-dark rounded-circle" id="cartCount"
+                                        style="padding-bottom: 2px;">
                                         <%= cartCount %>
                                     </span>
-                                <% } %>
+                                    <% } %>
                             </a>
                         </div>
-                        
+
                         <div class="btn-group ml-5">
-                            <button type="button" class="btn btn-sm rounded-pill btn-light dropdown-toggle text-uppercase" style="font-weight: bold;" data-toggle="dropdown">
+                            <button type="button"
+                                class="btn btn-sm rounded-pill btn-light dropdown-toggle text-uppercase"
+                                style="font-weight: bold;" data-toggle="dropdown">
                                 <%= user.userName %> <i class="fa fa-user"></i>
                             </button>
                             <div class="dropdown-menu dropdown-menu-right">
-                                <a href="/profile" class="dropdown-item" type="button">My Profile <i class="fa fa-user"></i></a>
+                                <a href="/profile" class="dropdown-item" type="button">My Profile <i
+                                        class="fa fa-user"></i></a>
                                 <a href="/logout" class="dropdown-item btn btn-danger" type="button">Logout</a>
                             </div>
                         </div>
                     </div>
-                    
+
                     <% }else{ %>
                         <div class="d-inline-flex  d-block d-lg-none float-right mt-3 mb-2">
                             <div class="float-right">
@@ -159,6 +175,16 @@
                         </div>
                         <% if (user) { %>
                             <div class="navbar-nav ml-auto py-0 d-none d-lg-block ">
+                                <form id="customForm1" action="/order/custom" method="get">
+                                    <input type="hidden" name="id" id="productId">
+                                    <button class="btn px-0 mr-3 " id="customButton2">
+                                        <i class="fas fa-book text-light mr-1"></i>
+                                        <span class="text-light ">
+                                            Custom
+                                        </span>
+                                    </button>
+                                </form>
+
                                 <a href="/wishlist" class="btn px-0 mr-3">
                                     <i class="fas fa-heart text-primary"></i>
                                     <% if(listCount){ %>
@@ -260,3 +286,41 @@
             </div>
         </div>
     </div>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const customButton1 = document.getElementById('customButton1');
+            const customButton2 = document.getElementById('customButton2');
+
+            const url = window.location.href;
+            const page = url.split('/');
+
+            if (page[3] == 'product-page') {
+
+                // customButton1.style.display = 'inline-block';
+                // customButton2.style.display = 'inline-block';
+            } else {
+                // customButton1.style.display = 'none';
+                // customButton2.style.display = 'none';
+            }
+
+            const productID = url.split('/').pop();
+            console.log("🚀 ~ file: user-header.ejs:307 ~ productID:", productID)
+
+            if (productID) {
+                customButton1.addEventListener('click', function (event) {
+                    event.preventDefault();
+                    window.location.href = '/order/custom/' + productID;
+                });
+                customButton2.addEventListener('click', function (event) {
+                    event.preventDefault();
+                    window.location.href = '/order/custom/' + productID;
+                });
+            }
+
+            // function isProductPage(id) {
+            //     return !isNaN(id) && id.length > 0;
+            // }
+
+        });
+
+    </script>
